# zim-rw

./: AGENTS.md  Cargo.toml  Makefile  TODO.md  bench-serve.sh  clippy.toml  rust-toolchain.toml
src/: cli.rs  codec.rs  format.rs  lib.rs  reader.rs  writer.rs
tests/: cli_e2e.rs  roundtrip.rs
