[package]
name = "zim-rw"
version = "0.1.0"
edition = "2024"

[lib]
name = "zim"
path = "src/lib.rs"

[[bin]]
name = "zim"
path = "src/cli.rs"

[dependencies]
md5 = "0.8.0"
memchr = "2.8.2"
walkdir = "2.5.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.27.0"

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

