[package]
name = "zim-rw"
version = "0.1.0"
edition = "2024"

[lib]
name = "zim"
path = "src/lib.rs"

[[bin]]
name = "zim"
path = "src/cli.rs"

[dependencies]
md5 = "0.8.0"
memchr = "2.8.2"
rustc-hash = "2.1"
walkdir = "2.5.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.27.0"
walkdir = "2.5.0"

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

[lints.clippy]
nursery = { level = "allow", priority = -2 }
pedantic = { level = "allow", priority = -2 }
complexity = { level = "deny", priority = -2 }
correctness = { level = "deny", priority = -2 }
perf = { level = "deny", priority = -2 }
restriction = { level = "allow", priority = -2 }
suspicious = { level = "deny", priority = -2 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = { level = "allow", priority = 1 }
style = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 0 }
wildcard_imports = { level = "deny", priority = 0 }
disallowed_types = { level = "deny", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
result_large_err = { level = "allow", priority = 1 }

